[b]Version 0.6.0rc1 (not released yet)[/b]:

(2008-01-23)
 * Updated the FAQ.

(2008-01-24)
 * Using now the sub_scale slave command for -ass subtitles. This allows to
   change the font size on runtime. Requires MPlayer r25843.
 * Now the font scale is stored in two independent variables, one if not
   using libass and another if using it. This is because the same value
   produces very different font sizes. A value of 7 can display subtitles
   with a normal size if not using libass, but if libass is enabled the 
   font will be  huge.
   Important: the Scale option in Preferences->Subtitles, which sets the
   initial font scale for new videos, will now be only used if libass is 
   disabled.
   It has been added a similar option for libass, but currently it can only 
   be changed by editing smplayer.ini (initial_sub_scale_ass, default value 1).

(2008-01-22)
 * Now the delay to update the video while dragging the time slider can
   be configured in smplayer.ini, option time_slider_drag_delay. The
   value by default is 100 (milliseconds).
 * The scale field in Preferences->Subtitles now accepts doubles.
   Fixes bug #1876114.

(2008-01-21)
 * Added some new icons to the default theme taken from nuvoX 
   (http://www.kde-look.org/content/show.php/nuvoX?content=38467)

(2008-01-18)
 * "Help->Command line options" now shows an html text, so it looks better.

(2008-01-17)
 * Added "Help->Command line options", which shows a text with help about
   the available command line options. It displays the same as smplayer -h
   but it will useful for Windows users, as smplayer -h doesn't work for 
   them.

(2008-01-16)
 * Now "Stay on top" is made properly, not cleaning the other flags.
 * The Makefile installs the files in docs/ru
 * Fixed a bug: Help->FAQ displayed the FAQ in the locale language and not
   in the language set in smplayer.
 * Now all the gpl.html in docs/ should be in UTF-8.
 * Converted docs/es/gpl.html and docs/de/gpl.html to UTF-8.